--- a/ProvisoLaravel/composer.json
+++ b/ProvisoLaravel/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "graphp/graph": "^1@dev",
+        "graphp/graphviz": "^1@dev",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
